--- a/website/package.json
+++ b/website/package.json
@@ -13,6 +13,7 @@
     "pdf-lib": "^1.17.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-elasticsearch": "^3.1.0",
     "react-router-dom": "^6.4.2",
     "react-scripts": "5.0.1",
     "socket.io-client": "^4.5.3",
