--- a/nginx.conf
+++ b/nginx.conf
@@ -23,14 +23,11 @@ http {
 
         location /api/ {
             proxy_pass http://localhost:5001/;
-        }
-
-        location /files/ {
-            proxy_pass http://localhost:9100/;
+            client_max_body_size 200M;
         }
 
         location /images/ {
-            alias C:/Users/Andre.LAPTOP01/Desktop/Dissertacao-OCR/server/;
+            alias C:/Users/Andre.LAPTOP01/Desktop/Dissertacao-OCR/server/files/;
         }
     }
 
