Fix nginx compose & Ports

--- a/compose/nginx/nginx.conf
+++ b/compose/nginx/nginx.conf
@@ -17,6 +17,7 @@ server {
     }
 
     location /images/ {
-        root /usr/share/nginx/html/files/;
+	# Remove /images/ to /files/
+        alias /usr/share/nginx/html/files/;
     }
 }
