--- a/server/requirements.txt
+++ b/server/requirements.txt
@@ -1,11 +1,13 @@
-pytesseract==0.3.10
-pdf2image==1.16.0
-Flask==2.2.2
+wheel
+packaging==23.0
+lxml==4.9.1
+Flask==2.2.3
 Flask-Cors==3.0.10
-opencv-python==4.5.4.60 
 elasticsearch==8.5.0
-PyPDF2==2.12.1
+Pillow==9.4.0
+opencv-python-headless==4.5.4.60
+pdf2image==1.16.3
+pytesseract==0.3.10
+PyPDF2==3.0.1
 easyocr==1.6.2
 reportlab==3.6.12
-lxml==4.9.1
-Pillow==9.2.0
