--- a/compose/server/Dockerfile
+++ b/compose/server/Dockerfile
@@ -47,7 +47,7 @@ COPY . /app
 
 WORKDIR /app
 
-RUN pip3 install --no-cache-dir requirements.txt
+RUN pip3 install --no-cache-dir -r requirements.txt
 
 FROM base
 
