run gunicorn in production environment

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -25,6 +25,7 @@ services:
       context: ./server
       dockerfile: ../compose/server/Dockerfile
     environment:
+      - FLASK_APP=app
       - ES_URL=http://elasticsearch:9200
     ports:
       - "5001"
