Improving threads (hopefully)

--- a/compose/server/Dockerfile
+++ b/compose/server/Dockerfile
@@ -79,7 +79,8 @@ COPY --from=builder /usr/local/lib/ /usr/local/lib/
 COPY --from=builder /usr/local/bin/ /usr/local/bin/
 
 COPY --from=builder /app/ /app/
-RUN sed -i 's/\r$//g' /app/start
-RUN chmod +x /app/start
+# RUN sed -i 's/\r$//g' /app/start
+# RUN chmod +x /app/start
 
-ENTRYPOINT [ "/app/start" ]
+# ENTRYPOINT [ "/app/start" ]
+ENTRYPOINT [ "python3", "app.py" ]
