--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -34,6 +34,8 @@ services:
     depends_on:
       elasticsearch:
         condition: service_healthy
+      redis:
+        condition: service_healthy
     volumes:
       - files_data:/app/files
     restart: unless-stopped
@@ -55,4 +57,29 @@ services:
       timeout: 30s
       retries: 15
       start_period: 10s
+    restart: unless-stopped
+
+  redis:
+    image: redis:latest
+    ports:
+      - "6379:6379"
+    healthcheck:
+      test: ["CMD", "redis-cli", "ping"]
+      interval: 10s
+      timeout: 30s
+      retries: 15
+      start_period: 10s
+    restart: unless-stopped
+
+  celery_worker:
+    build:
+      context: ./server
+      dockerfile: ../compose/celery/Dockerfile
+    command: celery -A celery_app.celery worker --loglevel=info --concurrency=12
+    volumes:
+      - files_data:/app/files
+    links:
+      - redis
+    depends_on:
+      - redis
     restart: unless-stopped
