--- a/server/requirements.txt
+++ b/server/requirements.txt
@@ -17,3 +17,8 @@ redis==4.5.1
 eventlet==0.33.3
 cryptography==41.0.2
 psutil==5.9.4
+pytest==7.4.0
+pytest-cov==4.1.0
+coverage==7.3.0
+django-coverage-plugin==3.1.0
+pypdf==3.15.2
