--- a/server/requirements.txt
+++ b/server/requirements.txt
@@ -1,25 +1,3 @@
-wheel
-packaging==23.0
-lxml==4.9.1
-gunicorn==20.1.0
-Flask==2.2.3
-Flask-Cors==3.0.10
-elasticsearch==8.5.0
-Pillow==9.4.0
-opencv-python-headless==4.7.0.72
-pdf2image==1.16.3
-pytesseract==0.3.10
-PyPDF2==3.0.1
-reportlab==3.6.12
-pytz==2023.3
-celery==5.3.0
-redis==4.5.1
-eventlet==0.33.3
-cryptography==41.0.2
-psutil==5.9.4
-hdbscan==0.8.33
-pytest==7.4.0
-pytest-cov==4.1.0
-coverage==7.3.0
-django-coverage-plugin==3.1.0
-pypdf==3.15.2
+# This file is expected by the Dockerfile.
+
+-r requirements/production.txt
