--- a/compose/server/Dockerfile
+++ b/compose/server/Dockerfile
@@ -132,7 +132,7 @@ COPY . /app
 
 WORKDIR /app
 
-RUN pip3 install --no-cache-dir -r requirements/production.txt
+RUN pip3 install --no-cache-dir -r requirements.txt
 
 FROM base
 
