--- a/compose/nginx/nginx.conf
+++ b/compose/nginx/nginx.conf
@@ -16,6 +16,15 @@ server {
         client_max_body_size 200M;
     }
 
+    location /flower/ {
+        proxy_pass http://flower:5050/flower/;
+        proxy_read_timeout 1800;
+        proxy_connect_timeout 1800;
+        proxy_send_timeout 1800;
+        send_timeout 1800;
+        client_max_body_size 200M;
+    }
+
     location /images/ {
 	# Remove /images/ to /files/
         alias /usr/share/nginx/html/files/;
