--- a/compose/server/Dockerfile
+++ b/compose/server/Dockerfile
@@ -84,7 +84,7 @@ FROM base
 # For Tesseract 5
 RUN apt-get update && apt-get install -y --no-install-recommends \
   software-properties-common gpg-agent
-RUN add-apt-repository -y ppa:alex-p/tesseract-ocr-devel
+RUN add-apt-repository -y ppa:alex-p/tesseract-ocr5
 
 RUN apt-get update && apt-get install -y --no-install-recommends \
   ghostscript \
