--- a/docker-compose.production.yml
+++ b/docker-compose.production.yml
@@ -7,6 +7,7 @@ services:
     build:
       context: ./server
       dockerfile: ../compose/server/Dockerfile
+    image: ocr-server
     environment:
       FLASK_APP: app
       FLASK_ENV: production
@@ -38,6 +39,20 @@ services:
     command: celery -A celery_app.celery worker --loglevel=info --without-gossip --without-mingle --without-heartbeat -Ofair --concurrency=8 -P eventlet
     volumes:
       - files_data:/app/files
+    depends_on:
+      - redis
+    restart: unless-stopped
+
+    networks:
+      - ocr-network
+
+  flower:
+    image: ocr-server
+    environment:
+      CELERY_BROKER_URL: redis://redis:6379
+    command: celery -A celery_app.celery flower --port=5555
+    ports:
+      - "5555:5555"
     depends_on:
       - redis
     restart: unless-stopped
