Rename celery_worker service to worker in Docker Compose files

--- a/docker-compose.production.yml
+++ b/docker-compose.production.yml
@@ -28,7 +28,7 @@ services:
     networks:
       - ocr-network
 
-  celery_worker:
+  worker:
     build:
       context: ./server
       dockerfile: ../compose/server/Dockerfile
