--- a/compose/server/Dockerfile
+++ b/compose/server/Dockerfile
@@ -14,56 +14,12 @@ RUN apt-get update && apt-get install -y --no-install-recommends \
 
 FROM base as builder
 
-# populate variable for later
-ARG TARGETARCH
-RUN arch=$TARGETARCH \
-    && if [ "$TARGETARCH" = "amd64" ]; then arch="x64"; fi \
-    && echo $arch > /tmp/arch
-
-# Note we need leptonica here to build jbig2
 RUN apt-get update && apt-get install -y --no-install-recommends \
-  build-essential autoconf automake libtool \
-  libleptonica-dev \
-  zlib1g-dev \
+  build-essential \
+  python3 \
   python3-dev \
-  libffi-dev \
   ca-certificates \
-  curl \
-  git \
-  libcairo2-dev \
-  pkg-config
-
-# Compile and install jbig2
-# Needs libleptonica-dev, zlib1g-dev
-RUN \
-  mkdir jbig2 \
-  && curl -L https://github.com/agl/jbig2enc/archive/c0141bf.tar.gz | \
-  tar xz -C jbig2 --strip-components=1 \
-  && cd jbig2 \
-  && ./autogen.sh && ./configure && make && make install \
-  && cd .. \
-  && rm -rf jbig2
-
-WORKDIR /usr/local/src
-
-ARG PYPDFIUM2_VERSION=4.30.1
-# synced with libpdfium version bundled by pypdfium above
-ARG PDFIUM_VERSION=6899
-ARG PDFIUM_URL=https://github.com/bblanchon/pdfium-binaries/releases/download/chromium
-
-# build to this prefix
-ARG PREFIX=/usr/local
-ENV PKG_CONFIG_PATH=$PREFIX/lib/pkgconfig
-
-RUN \
-  mkdir pdfium \
-  && curl -L $PDFIUM_URL/$PDFIUM_VERSION/pdfium-linux-$(cat /tmp/arch).tgz | \
-  tar xz -C pdfium \
-  && cd pdfium \
-  && cp lib/* $PREFIX/lib \
-  && cp -r include/* $PREFIX/include \
-  && cd .. \
-  && rm -rf pdfium
+  curl
 
 COPY . /app
 
@@ -73,32 +29,9 @@ WORKDIR /app
 RUN \
   curl https://bootstrap.pypa.io/get-pip.py | python3
 
-RUN pip3 install --no-cache-dir -r requirements.txt
+RUN pip3 install --no-cache-dir -r requirements/server/requirements.txt
 
 FROM base
-
-# For Tesseract 5
-RUN apt-get update && apt-get install -y --no-install-recommends \
-  software-properties-common gpg-agent
-RUN add-apt-repository -y ppa:alex-p/tesseract-ocr5
-
-RUN apt-get update && apt-get install -y --no-install-recommends \
-  ghostscript \
-  fonts-droid-fallback \
-  jbig2dec \
-  pngquant \
-  tesseract-ocr \
-  tesseract-ocr-chi-sim \
-  tesseract-ocr-deu \
-  tesseract-ocr-eng \
-  tesseract-ocr-fra \
-  tesseract-ocr-por \
-  tesseract-ocr-spa \
-  unpaper \
-  file \
-  && rm -rf /var/lib/apt/lists/*
-
-ENV TESSDATA_PREFIX=/usr/share/tesseract-ocr/5/tessdata/
 
 WORKDIR /app
 
