--- a/docker-compose.production.yml
+++ b/docker-compose.production.yml
@@ -31,7 +31,8 @@ services:
   worker:
     build:
       context: ./server
-      dockerfile: ../compose/server/Dockerfile
+      dockerfile: ../compose/worker/Dockerfile
+    image: ocr-worker
     environment:
       CELERY_BROKER_URL: redis://redis:6379
       CELERY_RESULT_BACKEND: redis://redis:6379
@@ -47,7 +48,7 @@ services:
       - ocr-network
 
   flower:
-    image: ocr-server
+    image: ocr-worker
     environment:
       CELERY_BROKER_URL: redis://redis:6379
     command: celery -A celery_app.celery flower --port=5555
