IF12 (backend); parametrize file paths; handle more errors; increase security of folder accesses
User-provided paths are sanitized. Requests are denied if required values are missing. Reserved folders now start with "_".

AdventurousGui/updates-OCR#14. closes AdventurousGui/updates-OCR#26.

--- a/compose/nginx/nginx.conf
+++ b/compose/nginx/nginx.conf
@@ -29,4 +29,8 @@ server {
 	# Remove /images/ to /files/
         alias /usr/share/nginx/html/files/;
     }
+
+    location /private/ {  # TODO: secure private session images
+        alias /usr/share/nginx/html/files/_private_sessions/;
+    }
 }
