--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -22,7 +22,7 @@ services:
       redis:
         condition: service_healthy
     volumes:
-      - files_data:/app/files
+      - files_data:/app/_files
     restart: unless-stopped
     networks:
       - ocr-network
@@ -37,7 +37,7 @@ services:
       C_FORCE_ROOT: true
     command: celery -A celery_app.celery worker --loglevel=info --without-gossip --without-mingle --without-heartbeat -Ofair --concurrency=8 -P eventlet -E --hostname=worker1@%h
     volumes:
-      - files_data:/app/files
+      - files_data:/app/_files
     depends_on:
       - redis
     restart: unless-stopped
@@ -71,7 +71,7 @@ services:
       retries: 15
       start_period: 10s
     volumes:
-      - files_data:/app/files
+      - files_data:/app/_files
     restart: unless-stopped
     networks:
       - ocr-network
@@ -89,6 +89,7 @@ services:
     environment:
       PUBLIC_URL: /ocr/
       REACT_APP_API_URL: ./api/
+      NODE_ENV: development
     restart: unless-stopped
     networks:
       - ocr-network
