make internal and external networks explicit in docker-compose

--- a/docker-compose.production.yml
+++ b/docker-compose.production.yml
@@ -25,7 +25,7 @@ services:
       - files_data:/app/_files
     restart: unless-stopped
     networks:
-      - ocr-network
+      - internal-network
 
   worker:
     build:
@@ -42,7 +42,7 @@ services:
       - redis
     restart: unless-stopped
     networks:
-      - ocr-network
+      - internal-network
 
   flower:
     image: ocr-server
@@ -55,7 +55,7 @@ services:
       - redis
     restart: unless-stopped
     networks:
-      - ocr-network
+      - internal-network
 
   redis:
     image: redis:7.2
@@ -71,7 +71,7 @@ services:
       - files_data:/app/_files
     restart: unless-stopped
     networks:
-      - ocr-network
+      - internal-network
 
   nginx:
     build:
@@ -90,7 +90,8 @@ services:
       REACT_APP_API_URL: ./api/
     restart: unless-stopped
     networks:
-      - ocr-network
+      - internal-network
+      - external-network
 
   elasticsearch:
     build:
@@ -111,8 +112,11 @@ services:
       start_period: 10s
     restart: unless-stopped
     networks:
-      - ocr-network
+      - internal-network
 
 networks:
-  ocr-network:
+  internal-network:
+    driver: bridge
+    internal: true
+  external-network:
     driver: bridge
