--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -43,6 +43,7 @@ services:
     restart: unless-stopped
     networks:
       - internal-network
+      - external-network
 
   flower:
     image: ocr-server
