--- a/.gitignore
+++ b/.gitignore
@@ -3,8 +3,10 @@ elasticsearch/
 **/IRIS/
 IRIS.py
 
+# Dont send reserved folders
 files/
 pending-files/
+_*/
 
 # Byte-compiled / optimized / DLL files
 __pycache__/
@@ -117,6 +119,8 @@ celerybeat.pid
 .venv
 env/
 venv/
+.env/
+.venv/
 ENV/
 env.bak/
 venv.bak/
