--- a/website/package.json
+++ b/website/package.json
@@ -13,6 +13,7 @@
     "pdf-lib": "^1.17.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-icons": "^5.5.0",
     "react-router-dom": "^6.4.2",
     "react-scripts": "5.0.1",
     "socket.io-client": "^4.5.3",
@@ -20,7 +21,7 @@
   },
   "scripts": {
     "start": "react-scripts start",
-    "build": "react-scripts build",
+    "build": "react-scripts build --profile",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
